qr-code literatuur update schrijfouten

--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -16,7 +16,7 @@ Het niet digitaliseren van lockers op festivals en evenementen kan leiden tot ve
 
 Een potentieel probleem is dat de festivalgangers zelf verantwoordelijk zijn voor de inhoud alsook voor de toegangscode voorgesteld als een QR-code van hun gekocht kluisje. Deze QR-code kan bewaard worden op allerlei manieren: als bijlage op gsm, kan bewaard worden op de applicatie van Lockit Rentals of indien mogelijk als effectieve QR-code voorgesteld op papier. Uiteraard is er geen zekerheid dat de festivalganger zijn code in zijn bezit heeft tot op het einde van een evenement. De huurder zijn telefoon kan uitgevallen zijn waardoor dat ze de QR-code niet meer in bezit hebben of de festivalganger raakt de afdrukte versie van de QR-code kwijt. Voor dit probleem zal gedurende de uitbating logistiek personeel aanwezig moeten zijn. Deze kunnen aan de hand van administratie rechten een duplicaat QR-code genereren om zo de locker te openen. Lockit Rentals wil dit analyseren en hiervoor een correcte oplossing vinden. 
 
-Een extra problematiek doet zich voor wanneer de QR-code scanners niet optimaal werken. Deze problemen kunnen ontstaan onveranderbare factoren zoals hevige zon of felle regen. Ook hebben sommige mensen die niet op de hoogte zijn van het systeem extra hulp nodig bij het scannen. Door het willen afschaffen van de logistieke medewerkers verliezen ze hier de mogelijkheid om informatieve en technische hulp te bieden ten behoeve van de klanten. Na festivalzomer 2022 is gebleken uit de observaties van het bedrijf dat de technologieën niet genoeg uitgewerkt zijn om de units onbemand uit te baten.
+Een extra problematiek doet zich voor wanneer de QR-code scanners niet optimaal werken. Deze problemen kunnen ontstaa door onveranderbare factoren zoals hevige zon of felle regen. Ook hebben sommige mensen die niet op de hoogte zijn van het systeem extra hulp nodig bij het scannen. Door het willen afschaffen van de logistieke medewerkers verliezen ze hier de mogelijkheid om informatieve en technische hulp te bieden ten behoeve van de klanten. Na festivalzomer 2022 is gebleken uit de observaties van het bedrijf dat de technologieën niet genoeg uitgewerkt zijn om de units onbemand uit te baten.
 
 \newpage
 \section{\IfLanguageName{dutch}{Onderzoeksvraag}{Research question}}%
